src/css/base/layout.css
@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Urbanist:wght@100;200;300;400;600&display=swap');

.App, html, body {
    color: var(--color-gray);
    font-size: var(--font-text-desktop);
    font-weight: 300;
    font-size: var(--font-text-desktop);
    font-family: "Noto Sans", "Roboto", 'Urbanist', sans-serif, 'Great Vibes', 'cursive' ;
}
.main{
    margin-top: 60px;
}

.description {
    margin: 0 auto;
    margin-top: 1rem;
    width: 80%;
    line-height: 1.2rem;
    /* height: 5rem; */
}

a{
  text-decoration: none;
}

.cta:nth-child(odd) {
  background: linear-gradient(
      rgba(250, 250, 250, 0.4),
      rgba(255, 255, 255, 0.3)
    ),
    url("/src/assets/images/button/green\ brush\ stroke.png");
  background-repeat: no-repeat;
  background-size: 100% 100%;
  height: 44px;
  line-height: 44px; 
  padding: 15px;
  white-space: nowrap;
}

@media screen and (max-width: 539px) {
  .App, html, body {
    font-size: var(--font-text-mobile);
  }
}
@media screen and (max-width: 320px) {
  .right-content a {
    font-size: 11px;
  }
}

